[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-knn"
version = "0.1.0"
authors = [
  { name="BayesianKitten", email="author@example.com" },
]
description = "A tiny KNN library for large Torch tensors."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
]

[project.scripts]
tiny-knn = "tiny_knn.cli:main"

[project.optional-dependencies]
test = ["pytest"]
